# holyChess

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
src/: board.cpp  board.h  holy_chess.cpp  holy_chess.h  main.cpp  piece.cpp  piece.h
